force-app/main/default/objects/ssot__CurrencyDatedConversionRate__dlm/fields/ssot__FromISOCurrencyCode__c.field-meta.xml
<CustomField>
    <fullName>ssot__FromISOCurrencyCode__c</fullName>
    <label>From ISO Currency Code</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>FromISOCurrencyCode</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>