force-app/main/default/objects/ssot__CurrencyDatedConversionRate__dlm/fields/ssot__ValidFromDate__c.field-meta.xml
<CustomField>
    <fullName>ssot__ValidFromDate__c</fullName>
    <label>Valid From Date</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ValidFromDate</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Date</type>
</CustomField>