force-app/main/default/objects/ssot__CurrencyDatedConversionRate__dlm/fields/ssot__ValidToDate__c.field-meta.xml
<CustomField>
    <fullName>ssot__ValidToDate__c</fullName>
    <label>Valid To Date</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ValidToDate</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Date</type>
</CustomField>